--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,13 @@ license = "GPLv3+"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+fastapi = "^0.68.1"
+uvicorn = {extras = ["standard"], version = "^0.15.0"}
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.2"
 pytest = "^6.2.5"
+requests = "^2.26.0"
 
 [tool.pytest.ini_options]
 python_files = [
