--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ uvicorn = {extras = ["standard"], version = "^0.15.0"}
 flake8 = "^3.9.2"
 pytest = "^6.2.5"
 requests = "^2.26.0"
+pytest-cov = "^2.12.1"
+codecov = "^2.1.12"
 
 [tool.pytest.ini_options]
 python_files = [
