todo-api-16 Improved CI to send code coverage to codecov

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,3 +23,5 @@ jobs:
         run: poetry install
       - name: Run tests
         run: poetry run pytest --cov='.' -v
+      - name: Send report to codecov.io
+        run: poetry run codecov
