--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9"
 fastapi = "^0.68.1"
 uvicorn = {extras = ["standard"], version = "^0.15.0"}
 mongoengine = "^0.23.1"
+fastapi-jwt-auth = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.2"
