todo-api-25 Installed and set up Dynaconf

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.68.1"
 uvicorn = {extras = ["standard"], version = "^0.15.0"}
 mongoengine = "^0.23.1"
 fastapi-jwt-auth = "^0.5.0"
+dynaconf = "^3.1.7"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.2"
