todo-api-31 Set Up GitHub  Repository Variables to CodeCov and JWT_SECRET

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,6 @@ jobs:
       - name: Run tests
         run: poetry run pytest --cov='.' -v
       - name: Send report to codecov.io
+        env:
+          CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
         run: poetry run codecov
