todo-api-37 Created an endpoint to get detail by id from the database to User resource.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pytest = "^6.2.5"
 requests = "^2.26.0"
 pytest-cov = "^2.12.1"
 codecov = "^2.1.12"
+freezegun = "^1.1.0"
 
 [tool.pytest.ini_options]
 python_files = [
