--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,15 @@ jobs:
       matrix:
         python-version: [3.9]
         poetry-version: [1.1.8]
+        mongodb-version: [5.0]
         os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
+      - name: Start MongoDB v${{ matrix.mongodb-version }}
+        uses: supercharge/mongodb-github-action@1.2.0
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
